--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
                 1. TÍTULO DE LA NOTICIA 
                 Reemplaza el texto "Gran Jornada de Limpieza y Recuperación de Espacios Públicos" por el título de tu noticia.
             -->
-            <h1 class="text-3xl sm:text-4xl font-extrabold text-blue-800 text-center mb-4">Gran Jornada de Limpieza y Recuperación de Espacios Públicos</h1>
+            <h1 class="text-3xl sm:text-4xl font-extrabold text-blue-800 text-center mb-4">Gran Jornada de Limpieza y Recuperación de Espacios Públicos en Nueva Jayana.</h1>
             
             <!-- 
                 2. AUTOR Y 3. FECHA Y HORA DE ÚLTIMA ACTUALIZACIÓN
                 Modifica el nombre del autor y la fecha y hora.
             -->
             <div class="text-center text-gray-500 text-sm mb-8">
-                <p><span class="font-semibold">Autor:</span> Dirección de Comunicaciones</p>
-                <p>Última actualización: 9 de septiembre de 2025, 12:30 PM</p>
+                <p><span class="font-semibold">Autor:</span> Dirección de Comunicación e Información</p>
+                <p>Última actualización: 13 de octubre de 2025, 02:46 PM</p>
             </div>
 
             <!-- 
@@ -53,9 +53,10 @@
                 Aquí puedes colocar todo el contenido de la noticia. Puedes usar etiquetas <p> para párrafos y <strong> para resaltar texto.
             -->
             <div class="prose max-w-none text-gray-700 leading-relaxed text-justify mb-8">
-                <p class="mb-4">Con el objetivo de fomentar la participación ciudadana y mejorar la calidad de vida en el municipio, la Alcaldía de Los Taques, en colaboración con diversas organizaciones comunitarias, llevó a cabo una exitosa <strong>Jornada Integral de Limpieza y Recuperación de Espacios Públicos</strong> en el sector de La Bocaina.</p>
-                <p class="mb-4">La actividad contó con la presencia de un gran número de voluntarios, quienes se unieron para embellecer parques, plazas y calles. Las tareas incluyeron desmalezamiento, recolección de residuos sólidos, siembra de árboles ornamentales y pintura de aceras y brocales. El Alcalde del Municipio Los Taques, en su intervención, destacó la importancia de estas iniciativas para construir una comunidad más unida y comprometida con el desarrollo local.</p>
-                <p class="mb-4">"Esta jornada demuestra que trabajando juntos, gobierno y comunidad, podemos lograr grandes cambios. Agradezco a cada uno de los participantes por su dedicación y esfuerzo. Los Taques es un municipio que se construye día a día con el trabajo de todos", expresó el mandatario municipal.</p>
+                <p class="mb-4">Con el objetivo de fomentar la participación ciudadana y mejorar la calidad de vida en el municipio, la Alcaldía de Los Taques, en colaboración con diversas organizaciones comunitarias, llevó a cabo una exitosa <strong>Jornada Integral de Limpieza y Recuperación de Espacios Públicos</strong> en el sector del Parque Residencial Nueva Jayana.</p>
+                <p class="mb-4">La actividad contó con la presencia de un gran número de voluntarios, quienes se unieron para embellecer los parques, calles y avenidas. Las tareas incluyeron desmalezamiento, recolección de residuos sólidos, siembra de árboles ornamentales y pintura de aceras y brocales. La Alcaldesa del Municipio Los Taques, Lorena Ysea en su intervención, destacó la importancia de estas iniciativas para construir una comunidad más unida y comprometida con el desarrollo local.</p>
+                <p class="mb-4">"Esta jornada demuestra que trabajando juntos, gobierno y comunidad, podemos lograr grandes cambios. Agradezco a cada uno de los participantes por su dedicación y esfuerzo. Los Taques es un municipio que se construye día a día con el trabajo de todos", expresó la mandataria municipal.</p>
+                <p>Por otra parte, el presidente de la Asociación de Vecinos de la respectiva comunidad, Luis Rodríguez agradecio la intervención ejecutivo municipal en este proyecto que ha sido muy solicitado en la comunidad.</p>
                 <p>La Dirección de Comunicación e Información seguirá informando sobre futuras actividades y eventos que promuevan el bienestar de la ciudadanía.</p>
             </div>
 
