--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <p class="mb-4">Con el objetivo de fomentar la participación ciudadana y mejorar la calidad de vida en el municipio, la Alcaldía de Los Taques, en colaboración con diversas organizaciones comunitarias, llevó a cabo una exitosa <strong>Jornada Integral de Limpieza y Recuperación de Espacios Públicos</strong> en el sector del Parque Residencial Nueva Jayana.</p>
                 <p class="mb-4">La actividad contó con la presencia de un gran número de voluntarios, quienes se unieron para embellecer los parques, calles y avenidas. Las tareas incluyeron desmalezamiento, recolección de residuos sólidos, siembra de árboles ornamentales y pintura de aceras y brocales. La Alcaldesa del Municipio Los Taques, Lorena Ysea en su intervención, destacó la importancia de estas iniciativas para construir una comunidad más unida y comprometida con el desarrollo local.</p>
                 <p class="mb-4">"Esta jornada demuestra que trabajando juntos, gobierno y comunidad, podemos lograr grandes cambios. Agradezco a cada uno de los participantes por su dedicación y esfuerzo. Los Taques es un municipio que se construye día a día con el trabajo de todos", expresó la mandataria municipal.</p>
-                <p>Por otra parte, el presidente de la Asociación de Vecinos de la respectiva comunidad, Luis Rodríguez agradecio la intervención ejecutivo municipal en este proyecto que ha sido muy solicitado en la comunidad.</p>
-                <p>La Dirección de Comunicación e Información seguirá informando sobre futuras actividades y eventos que promuevan el bienestar de la ciudadanía.</p>
+                <p>Por otra parte, el presidente de la Asociación de Vecinos de la respectiva comunidad, Luis Rodríguez agradecio la intervención del ejecutivo municipal en este proyecto que ha sido muy solicitado en la comunidad.</p><br>
+                <p>La Dirección de Comunicación e Información seguirá informando sobre futuras actividades y eventos que promuevan el bienestar de la ciudadanía taquense.</p>
             </div>
 
             <!-- 
