--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class="flex-grow text-center text-sm sm:text-lg md:text-xl font-bold">Dirección de Comunicación e Información de la Alcaldía del Municipio Los Taques</h1>
         <!-- Imagen de la Alcaldía -->
         <div class="flex-shrink-0 ml-4">
-            <img src="https://i.ibb.co/przKKRmp/Los-Taques-20250909-071627-0001.png" 
+            <img src="https://i.ibb.co/jvgDZ83S/Los-Taques-20250909-071627-0001.png" 
                  onerror="this.src='https://placehold.co/80x80/60a5fa/ffffff?text=LOGO'" 
                  alt="Logo de la Alcaldía de Los Taques" 
                  class="w-16 h-16 sm:w-20 sm:h-20 rounded-md shadow-lg">
@@ -37,15 +37,15 @@
                 1. TÍTULO DE LA NOTICIA 
                 Reemplaza el texto "Gran Jornada de Limpieza y Recuperación de Espacios Públicos" por el título de tu noticia.
             -->
-            <h1 class="text-3xl sm:text-4xl font-extrabold text-blue-800 text-center mb-4">Gran Jornada de Limpieza y Recuperación de Espacios Públicos en Nueva Jayana.</h1>
+            <h1 class="text-3xl sm:text-4xl font-extrabold text-blue-800 text-center mb-4">Alcaldía de Los Taques evalúa infraestructuras clave en Cumujacoa para potenciar el desarrollo comunitario</h1>
             
             <!-- 
                 2. AUTOR Y 3. FECHA Y HORA DE ÚLTIMA ACTUALIZACIÓN
                 Modifica el nombre del autor y la fecha y hora.
             -->
             <div class="text-center text-gray-500 text-sm mb-8">
-                <p><span class="font-semibold">Autor:</span> Dirección de Comunicación e Información</p>
-                <p>Última actualización: 13 de octubre de 2025, 02:46 PM</p>
+                <p><span class="font-semibold">Autor:</span> Dirección de Comunicaciones</p>
+                <p>Última actualización: 10 de septiembre de 2025, 5:00 PM</p>
             </div>
 
             <!-- 
@@ -53,11 +53,12 @@
                 Aquí puedes colocar todo el contenido de la noticia. Puedes usar etiquetas <p> para párrafos y <strong> para resaltar texto.
             -->
             <div class="prose max-w-none text-gray-700 leading-relaxed text-justify mb-8">
-                <p class="mb-4">Con el objetivo de fomentar la participación ciudadana y mejorar la calidad de vida en el municipio, la Alcaldía de Los Taques, en colaboración con diversas organizaciones comunitarias, llevó a cabo una exitosa <strong>Jornada Integral de Limpieza y Recuperación de Espacios Públicos</strong> en el sector del Parque Residencial Nueva Jayana.</p>
-                <p class="mb-4">La actividad contó con la presencia de un gran número de voluntarios, quienes se unieron para embellecer los parques, calles y avenidas. Las tareas incluyeron desmalezamiento, recolección de residuos sólidos, siembra de árboles ornamentales y pintura de aceras y brocales. La Alcaldesa del Municipio Los Taques, Lorena Ysea en su intervención, destacó la importancia de estas iniciativas para construir una comunidad más unida y comprometida con el desarrollo local.</p>
-                <p class="mb-4">"Esta jornada demuestra que trabajando juntos, gobierno y comunidad, podemos lograr grandes cambios. Agradezco a cada uno de los participantes por su dedicación y esfuerzo. Los Taques es un municipio que se construye día a día con el trabajo de todos", expresó la mandataria municipal.</p>
-                <p>Por otra parte, el presidente de la Asociación de Vecinos de la respectiva comunidad, Luis Rodríguez agradecio la intervención del ejecutivo municipal en este proyecto que ha sido muy solicitado en la comunidad.</p><br>
-                <p>La Dirección de Comunicación e Información seguirá informando sobre futuras actividades y eventos que promuevan el bienestar de la ciudadanía taquense.</p>
+                <p class="mb-4">En el marco del plan de rehabilitación y mantenimiento de espacios públicos, la Alcaldía del Municipio Los Taques, bajo la directriz de la alcaldesa Lorena Ysea, inició una inspección técnica integral en la comunidad de Nueva Jayana. Esta labor está siendo ejecutada por la Dirección de Infraestructura, cuyo titular, el ingeniero Ramón Ramos, dirige un equipo especializado para evaluar el estado de las infraestructuras más significativas de la localidad.</p>
+                <p class="mb-4">El recorrido técnico consistió en una minuciosa revisión de la parte interna y externa de los principales puntos de encuentro social y deportivo. Las estructuras evaluadas incluyen la emblemática Plaza San Ignacio de Loyola, corazón de la vida social de Nueva Jayana; la cancha deportiva de béisbol, semillero de talento athletic; la cancha de bolas criollas, espacio de esparcimiento para adultos y adultos mayores; el ambulatorio, vital para la atención primaria en salud; y la sede de la Asociación de Vecinos de Cumujacoa, que funcionaba anteriormente como sede del Consejo Comunal.
+                 Este diagnóstico detallado permitirá a la administración municipal diseñar un cronograma de trabajo preciso para la recuperación, rehabilitación y modernización de estos espacios. La iniciativa busca no solo mejorar el ornato de la comunidad, sino fundamentalmente fomentar la participación ciudadana, robustecer la integración social y promover la práctica deportiva como herramienta de desarrollo y sana convivencia.</p>
+                <p class="mb-4">"La alcaldesa Lorena Ysea reiteró que esta acción concreta refleja el firme compromiso de su gestión con el bienestar de todas las comunidades que conforman el Municipio Los Taques. “Nuestro gobierno cree en la gente y en la potencia de sus comunidades. Recuperar estos espacios es invertir en el capital social, en la salud y en la recreación de nuestras familias. Es un trabajo que hacemos con planificación y de la mano de los vecinos”, afirmó la primera autoridad municipal.
+                 Con este proyecto, la Alcaldía de Los Taques reafirma su dedication por devolverle el esplendor a los espacios públicos, consolidándolos como lugares seguros, dignos y de calidad para el disfrute de todos los habitantes, fortaleciendo así el sentido de pertenencia y el orgullo de ser taquense.</p>
+                <p>La Dirección de Comunicación e Información seguirá informando sobre futuras actividades y eventos que promuevan el bienestar de la ciudadanía.</p>
             </div>
 
             <!-- 
@@ -65,13 +66,6 @@
                 Puedes añadir tus propias imágenes aquí. Simplemente reemplaza la URL de la imagen en la etiqueta <img>.
                 Puedes agregar tantas fotos como desees.
             -->
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mt-10">
-                <img src="https://i.ibb.co/KphtwhTg/74215155-the-gardener-is-cleaning-the-lawn-full-of-fallen-leaves.jpg" alt="Descripción de la foto 1" class="rounded-lg shadow-md w-full h-auto">
-                <img src="https://i.ibb.co/bMDgk6m0/jardinero-weedwacker-cortando-cesped-jardin-329181-20539.jpg" alt="Descripción de la foto 2" class="rounded-lg shadow-md w-full h-auto">
-                <img src="https://i.ibb.co/G30wRN0H/persona-que-usa-aspiradora-limpiar-cesped-861255-8.jpg" alt="Descripción de la foto 3" class="rounded-lg shadow-md w-full h-auto">
-                <img src="https://i.ibb.co/gM2xrFPB/trabajador-que-opera-soplador-hojas-servicio-pesado-parque-ciudad-quitar-hojas-caidas-otono-servicio.jpg" alt="Descripción de la foto 4" class="rounded-lg shadow-md w-full h-auto">
-            </div>
-        </article>
     </main>
 
     <!-- Pie de Página -->
